--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -9890,8 +9890,6 @@ svg.svelte-1ociadw {
     font-size: var(--font-size-2);
 }
 
-
-
 .eRtnwf {
     display: flex;
     justify-content: space-between;
@@ -9905,11 +9903,6 @@ svg.svelte-1ociadw {
     color: inherit;
     border: none;
 }
-
-.sc-29ce6dea-0 {
-    margin: 0 3px;
-}
-
 
 /* chart */
 
@@ -9929,6 +9922,12 @@ svg.svelte-1ociadw {
     .ksbtLm {
         padding: 1.5rem;
     }
+
+}
+
+@media (max-width: 425px) {
+    .kFQQf {
+        margin: 0 10px;
 
 }
 
@@ -10156,6 +10155,7 @@ a.button.border-btn.no-underline:hover {
 }
 
 .doc_swap{
-    background-color: #fff;
+    background: var(--box--primary--background);
     padding: 20px 30px;
+    box-shadow: 6px 6px 0 var(--box--primary--shadow-color);
 }
