--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -9928,7 +9928,7 @@ svg.svelte-1ociadw {
 @media (max-width: 425px) {
     .kFQQf {
         margin: 0 10px;
-
+    }
 }
 
 @media (min-width: 26.625rem) {
