--- a/CSS/eceb7dbcc1f07576.css
+++ b/CSS/eceb7dbcc1f07576.css
@@ -135,7 +135,7 @@ body.theme-default {
     --whitel98: #fafafa;
     --page--text-color: var(--text-400);
     --page--background-color: var(--whitel05);
-    /* --layout--home--background-color: var(--whitel98); */
+    --layout--home--background-color: var(--whitel98);
     --font-weight--bold: var(--bold);
     --font-weight--semi-bold: var(--semi-bold);
     --font-weight--normal: var(--normal);
@@ -287,10 +287,10 @@ body.theme-default {
     --radio--selected--border-color: var(--primary-400);
     --radio--selected--background-color: var(--primary-400);
     --slider--background-color: linear-gradient(to right, var(--whitel85) 0%, var(--whitel85) 100%);
-    /* --skeleton--background-color: #d9d9d9; */
+    --skeleton--background-color: #d9d9d9;
     --skeleton--background-image: linear-gradient(90deg, #f2f2f21a, #f2f2f233, #f2f2f24d, #f2f2f21a);
-    /* --skeleton_light--background-color: var(--skeleton--background-color); */
-    /* --skeleton_light--background-image: var(--skeleton--background-image); */
+    --skeleton_light--background-color: var(--skeleton--background-color);
+    --skeleton_light--background-image: var(--skeleton--background-image);
     --spinner--foreground-color: var(--white);
     --spinner--background-color: var(--primary-400a50);
     --summary_header--background-color: #e8e8e8;
@@ -472,7 +472,7 @@ body.theme-chad {
     --warning-text-400: #ba9308;
     --page--text-color: var(--text-600);
     --page--background-color: var(--primary-700);
-    /* --layout--home--background-color: var(--white); */
+    --layout--home--background-color: var(--white);
     --active--background-color: var(--primary-100);
     --active--border-color: var(--primary-100);
     --active_filled--background-color: var(--black);
