--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -9684,7 +9684,6 @@ svg.svelte-1ociadw {
     min-height: var(--box_header--height);
     width: 100%;
     color: var(--box--primary--color);
-    background-color: var(--box_header--primary--background-color);
     font-size: var(--box_header--font-size);
     font-weight: var(--box_header--font-weight);
 }
@@ -9770,6 +9769,7 @@ svg.svelte-1ociadw {
 .dCWjAA {
     background: var(--box--primary--background);
     box-shadow: 6px 6px 0 var(--box--primary--shadow-color);
+    padding: 0 10px;
 }
 
 .cnVwld {
@@ -10153,3 +10153,14 @@ a.button.border-btn.no-underline:hover {
     padding: 20px 30px;
     box-shadow: 6px 6px 0 var(--box--primary--shadow-color);
 }
+
+
+.chart-container.fullscreen {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
